Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20039

sanity-lnet test_257: FAIL: Failed to enable routing rc = 244

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • Lustre 2.18.0
    • None
    • aarch64 client
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/94d57283-1fa2-4942-ab89-66b3a9b3db6d

      test_257 failed with the following error:

      Enable routing on onyx-180vm2
      CMD: onyx-180vm2 /usr/sbin/lnetctl set routing 1
      onyx-180vm2: add:
      onyx-180vm2:     - routing:
      onyx-180vm2:           errno: -12
      onyx-180vm2:           descr: "cannot enable routing Cannot allocate memory"
      pdsh@onyx-180vm1: onyx-180vm2: ssh exited with exit code 244
       sanity-lnet test_257: @@@@@@ FAIL: Failed to enable routing rc = 244
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master/4708 - 5.14.0-503.40.1.el9_5.aarch64+64k
      servers: https://build.whamcloud.com/job/lustre-master/4708 - 4.18.0-553.89.1.el8_lustre.x86_64

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-lnet test_257 - Failed to enable routing rc = 244

            hornc Chris Horn
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: