LU-20039 lnet: preserve router buffer sizing on re-enable

When sanity-lnet test 257 disables routing and then enables it
again, the router can try to allocate the default large buffer
pool instead of the small buffer counts configured at module
load time. On small-memory test nodes this can trigger an
allocation failure like:

lnet: error allocating 1024x16 page router buffers on CPT 0: rc = -12

The disable and re-enable path was losing the configured router
buffer sizes. lnet_rtrpools_disable() reset tiny_router_buffers,
small_router_buffers, and large_router_buffers to zero, and
lnet_rtrpools_enable() rebuilt existing pools by calling
lnet_rtrpools_adjust_helper() with 0, 0, 0. In this interface, zero
means to fall back to the default sizing, not to preserve the current
values.

Fix this by keeping the configured buffer counts across routing
disable, and by having lnet_rtrpools_enable() rebuild the
existing pools with the saved tiny, small, and large router
buffer values. This makes routing re-enable follow the same
effective sizing as the initial router pool allocation.

Test-Parameters: trivial
Fixes: ed70ccb471 ("LU-15135 lnet: Graceful router removal and addition")
Signed-off-by: Chris Horn <chris.horn@hpe.com>
Change-Id: I6edff22744275bfe2fc95496d8a31d802803cb76
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65153
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Cyril Bordage <cbordage@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>